# chezmoi-dotfiles

./: .chezmoi.toml.tmpl  .chezmoiexternal.toml  .chezmoiignore  .lintstagedrc  .pre-commit-config.yaml  .prettierignore  .prettierrc  .yamlfmt.yml  README.md  _typos.toml  bootstrap.sh  dot_Xresources  dot_abbrev_defs.tmpl  dot_asoundrc  dot_editorconfig  dot_eslintrc.yml  dot_gitconfig  dot_gitconfig.tmpl  dot_iprayrc.tmpl  dot_jshintrc  dot_latexmkrc  dot_ledgerrc.tmpl  dot_perlcriticrc  dot_perltidyrc  dot_prettierrc  dot_profile.tmpl  dot_proverc  dot_pylintrc  dot_rtorrent.rc  dot_rubocop.yml  dot_sbclrc  dot_signature.tmpl  dot_slrnrc  dot_spacemacs.tmpl  dot_surfraw.conf  dot_taskrc.tmpl  dot_tmux.conf.local  dot_vintrc.yaml  dot_xbindkeysrc  dot_xprofile  (+7 more)
.chezmoidata/: default_apps.toml  mpv_plugins.toml  packages.toml  ranger_plugins.toml  themes.toml  vscode.json
.chezmoiscripts/: run_00-intro.tmpl  run_01-install-packages.tmpl  run_02-zinit.tmpl  run_05-ranger.tmpl  run_06-nnn.tmpl  run_07-scripts.tmpl  run_08-fonts.tmpl  run_09-lazyvim.tmpl  run_10-spacemacs.tmpl  run_10-yazi-plugins.tmpl  run_12-vscode-extensions.tmpl  run_13-theme.tmpl  run_after_zz-outro.tmpl  run_before_01-holidays.tmpl  run_once_02-vscode-extensions.tmpl  run_once_04-slapt-get.tmpl  run_once_after_01-systemd.tmpl  run_onchange_01-install-packages.tmpl  run_onchange_02-zinit.tmpl  run_onchange_03-tmux.tmpl  run_zz-outro.tmpl  (+12 more)
scripts/music/: Cargo.toml
scripts/music/src/: audiobook.rs  bookmarks.rs  daemon.rs  main.rs  mpdplayer.rs  mpdplayer.rs.tmpl  mprisplayer.rs  music.py  utils.rs
(+372 files in other folders)
