[package]
name = "music"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.14"
html-escape = "0.2.13"
mime_guess = "2.0.4"
mp3-duration = "0.1.10"
mpd = "0.1"
mpris = "2.0.0"
notify-rust = "4.8.0"
serde = { version = "1.0.159", features = ["derive"] }
serde-xml-rs = "0.6.0"
serde_json = "1.0.95"
unix-named-pipe = "0.2.0"
urlencoding = "2.1.2"
